crates/aion-awl/tests/fixtures/rev2/declarations/invalid/action_list_element_optional.awl
//! An action signature tries to take a list of optional elements.
workflow roster_check
  input names: [String]
  outcome checked: type Roster, route success

type Roster { present: Int }

worker roll_call
  action tally(names: [String?]) -> Roster

step tally_up
  tally(names: names) -> roster
  roster |> route checked
